# vgcteambuilder

./: Blacklisted Teams.txt  README.md
vgc-bench/: .gitignore  .gitmodules  LICENSE  README.md  bottest1.py  bottest2.py  eval.sh  pokemonteamrater.py  pretrain.sh  pyproject.toml  randomsampler.py  randomsamplerbackup.py  teamseparater.py  train.sh
vgc-bench/data/: betterteams.txt  goodteams.txt
vgc-bench/data/teams/regh/betterteams/: testfile00.txt  testfile01.txt  testfile02.txt  testfile03.txt  testfile04.txt  testfile05.txt  testfile10.txt  testfile100.txt  testfile101.txt  testfile102.txt  testfile103.txt  testfile104.txt  testfile105.txt  testfile11.txt  testfile110.txt  testfile111.txt  testfile112.txt  testfile113.txt  testfile114.txt  testfile115.txt  testfile12.txt  testfile120.txt  testfile121.txt  testfile122.txt  testfile123.txt  testfile124.txt  testfile125.txt  testfile13.txt  testfile130.txt  testfile131.txt  testfile132.txt  testfile133.txt  testfile134.txt  testfile135.txt  testfile14.txt  testfile140.txt  testfile141.txt  testfile142.txt  testfile143.txt  testfile144.txt  (+116 more)
vgc-bench/data/teams/regh/goodteams/: testfile00.txt  (+767 more)
vgc-bench/internal_data/: plateitems.txt  pokemonmovesets.txt  pokemonstats.txt  slicemoves.txt  soundmoves.txt  vgcteams.txt
vgc-bench/vgc_bench/: eval.py  eval_teams.py  eval_teams_base.py  logs2trajs.py  play.py  pretrain.py  scrape_data.py  scrape_logs.py  scrape_teams.py  train.py  visualize.py
vgc-bench/vgc_bench/src/: callback.py  env.py  llm.py  policy.py  policy_player.py  teams.py  test_teams.py  utils.py
(+19 files in other folders)
